@@ -2,7 +2,8 @@ Version 1.1-0 (2016-02-03)
 
 o Added boXM from biotools
 o Fleshed out boxM() with formula, lm, plot and summary methods
-o Added covEllipses() methods
+o added plot.boxM() method
+o Added covEllipses() methods for plotting (possibly robust) covariance ellipses
 
 
 Version 1.0-16 (2015-07-11)
